--- a/app/src/main/res/layout/item_option_holder.xml
+++ b/app/src/main/res/layout/item_option_holder.xml
@@ -2,12 +2,16 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/choice_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="option"
         android:textStyle="italic"
-        android:textColor="@android:color/black"/>
+        android:textColor="@android:color/black"
+        android:drawableStart="@drawable/icon_voting_choice"
+        android:drawablePadding="10dp"
+        android:layout_margin="5dp"/>
 </android.support.v7.widget.CardView>
