--- a/app/src/main/res/layout/item_option_holder.xml
+++ b/app/src/main/res/layout/item_option_holder.xml
@@ -4,14 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/choice_view"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="italic"
-        android:textColor="@android:color/black"
-        android:drawableStart="@drawable/icon_voting_choice"
-        android:drawablePadding="10dp"
-        android:layout_margin="5dp"/>
+        android:orientation="horizontal">
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/choice_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textStyle="italic"
+            android:textColor="@android:color/black"
+            android:drawableStart="@drawable/icon_voting_choice"
+            android:drawablePadding="10dp"
+            android:layout_margin="5dp"
+            android:layout_weight="1"/>
+
+
+    </LinearLayout>
+
 
 </android.support.v7.widget.CardView>
