--- a/app/src/main/res/layout/item_option_holder.xml
+++ b/app/src/main/res/layout/item_option_holder.xml
@@ -20,7 +20,13 @@
             android:layout_margin="5dp"
             android:layout_weight="1"/>
 
-
+        <android.support.v7.widget.AppCompatImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="2dp"
+            android:src="@drawable/icon_delete_option"
+            android:background="@android:color/transparent"/>
     </LinearLayout>
 
 
