--- a/app/src/main/res/layout/item_option_holder.xml
+++ b/app/src/main/res/layout/item_option_holder.xml
@@ -18,7 +18,8 @@
             android:drawableStart="@drawable/icon_voting_choice"
             android:drawablePadding="10dp"
             android:layout_margin="5dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:gravity="center_vertical"/>
 
         <android.support.v7.widget.AppCompatImageButton
             android:id="@+id/delete_choice"
