--- a/app/src/main/res/layout/activity_log_in_splash.xml
+++ b/app/src/main/res/layout/activity_log_in_splash.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cc1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.LogInActivity"
-    android:background="@drawable/background">
+    android:background="@drawable/background"
+    tools:context=".activities.LogInActivity">
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/appCompatImageView"
@@ -40,13 +39,14 @@
         app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
         app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
 
-    <android.support.v7.widget.AppCompatImageView
+    <ImageView
         android:id="@+id/appCompatImageView2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="20dp"
         android:layout_marginTop="28dp"
+        android:contentDescription="@null"
         android:scaleType="centerInside"
         android:src="@drawable/user_icon"
         app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
