--- a/app/src/main/res/layout/item_src_activity_card.xml
+++ b/app/src/main/res/layout/item_src_activity_card.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -149,8 +148,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:baselineAligned="false">
+                android:baselineAligned="false"
+                android:orientation="horizontal">
 
 
                 <android.support.constraint.ConstraintLayout
@@ -236,20 +235,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layoutDirection="rtl"
-                android:text="@string/student_anonymity"
                 android:paddingLeft="15dp"
-                android:paddingRight="15dp"
                 android:paddingTop="10dp"
-                android:paddingBottom="10dp"/>
+                android:paddingRight="15dp"
+                android:paddingBottom="10dp"
+                android:text="@string/student_anonymity" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
                 android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp">
+                android:layout_marginRight="15dp"
+                android:orientation="horizontal">
 
-                <android.support.design.widget.TextInputLayout
+                <FrameLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="12dp"
@@ -260,18 +259,18 @@
                         android:id="@+id/input_comment"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/comment"
-                        android:background="@android:color/transparent"/>
-                </android.support.design.widget.TextInputLayout>
+                        android:background="@android:color/transparent"
+                        android:hint="@string/comment" />
+                </FrameLayout>
 
                 <android.support.v7.widget.AppCompatImageButton
                     android:id="@+id/send_comment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/icon_send"
-                    android:background="@android:color/transparent"
                     android:layout_gravity="center_vertical"
-                    android:layout_margin="5dp"/>
+                    android:layout_margin="5dp"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/icon_send" />
             </LinearLayout>
 
         </LinearLayout>
@@ -295,11 +294,11 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:background="@android:color/transparent"
             android:text="@string/view_comments"
+            android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/student_sec"
-            android:textAllCaps="false"
-            android:background="@android:color/transparent"/>
+            app:layout_constraintTop_toBottomOf="@+id/student_sec" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
