--- a/app/src/main/res/layout/activity_log_in_splash.xml
+++ b/app/src/main/res/layout/activity_log_in_splash.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cc1"
@@ -39,7 +40,7 @@
         app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
         app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
 
-    <ImageView
+    <android.support.v7.widget.AppCompatImageView
         android:id="@+id/appCompatImageView2"
         android:layout_width="0dp"
         android:layout_height="0dp"
