--- a/app/src/main/res/layout/item_src_activity_card.xml
+++ b/app/src/main/res/layout/item_src_activity_card.xml
@@ -153,6 +153,7 @@
 
 
                 <android.support.constraint.ConstraintLayout
+                    android:id="@+id/like_button"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1">
@@ -191,6 +192,7 @@
                 </android.support.constraint.ConstraintLayout>
 
                 <android.support.constraint.ConstraintLayout
+                    android:id="@+id/dislike_button"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1">
